<resources>
    <string name="facebook_app_id">216005369501436</string>
    <string name="fb_login_protocol_scheme">fb216005369501436</string>
    <string name="app_name">এক হাট</string>
    <string name="connection_problem">ইন্টারনেট কানেকশন ফেল</string>
    <string name="connection_check">অনুগ্রহ করে আপনার ইন্টারনেট কানেকশন চেক করুন।</string>
    <string name="ok">ওকে</string>
    <string name="phone_number">মোবাইল নাম্বার</string>
    <string name="name">আপনার নাম</string>
    <string name="signup1">সাইন-আপ?</string>
    <string name="signin2">সাইন-ইন</string>
    <string name="signup2">সাইন-আপ</string>
    <string name="signin1">সাইন-ইন?</string>
    <string name="verification_code">আপনার ফোনে পাঠানো ভেরিফিকেশন কোডটি বসান।</string>
    <string name="resnd_code">কোড পুনরায় সেন্ড করুন</string>
    <string name="submit">সাবমিট করুন</string>
    <string name="phone_error_title">মোবাইল নাম্বারটি সঠিক নয়</string>
    <string name="phone_error_body">অনুগ্রহ করে সঠিক মোবাইল নাম্বার দিন।</string>
    <string name="pin_error_tile">কোড নাম্বারটি সঠিক নয়</string>
    <string name="pin_error_body">অনুগ্রহ করে সঠিক কোড নাম্বারটি দিন।</string>
    <string name="account_error_tile">ইনভ্যালিড ইউজার</string>
    <string name="account_error_body">অনুগ্রহ করে প্রথমে সাইন-আপ করুন।</string>
    <string name="seller">বিক্রেতা ?</string>
    <string name="buyer">ক্রেতা ?</string>
    <string name="seller2">বিক্রেতা</string>
    <string name="buyer2">ক্রেতা</string>
    <string name="user_type">ইউজার টাইপ ?</string>
    <string name="input_error">ইনপুট এরর</string>
    <string name="name_error">আপনার নাম লিখুন</string>
    <string name="type_error">ইউজার টাইপ সিলেক্ট করুন</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="total_item">মোট পশুর সংখ্যা</string>
    <string name="total_sold_item">বিক্রিত পশুর সংখ্যা</string>
    <string name="total_item2">মোট ক্রয়কৃত পশুর সংখ্যা</string>
    <string name="total_buy">মোট ক্রয়</string>
    <string name="total_unsold_item">অবিক্রিত পশুর সংখ্যা</string>
    <string name="total_sell">মোট বিক্রি</string>
    <string name="name2">নাম</string>
    <string name="location">লোকেশন</string>
    <string name="userID">আইডি</string>
    <string name="email">ইমেইল</string>
    <string name="address">ঠিকানা</string>
    <string name="cancel">বাতিল করুন</string>
    <string name="name_change">আপনার নাম পরিবর্তন করুন</string>
    <string name="phone_number_change">আপনার মোবাইল নাম্বার পরিবর্তন করুন</string>
    <string name="email_change">আপনার ইমেইল পরিবর্তন করুন</string>
    <string name="address_change">আপনার ঠিকানা পরিবর্তন করুন</string>
    <string name="price">দাম</string>
    <string name="empty">লিস্ট খালি</string>
    <string name="admin">অ্যাডমিন</string>
    <string name="highest_bid">সর্বোচ্চ দাম হয়েছে</string>
    <string name="total_bid">মোট দাম করেছেন</string>
    <string name="profile">প্রোফাইল</string>
    <string name="taka">টাকা</string>
    <string name="ti">টি</string>
    <string name="all_animals">সবগুলো পশুর লিস্ট</string>
    <string name="sold_animals">বিক্রিত পশুর লিস্ট</string>
    <string name="unsold_animal">অবিক্রিত পশুর লিস্ট</string>
    <string name="add_new_animal">নতুন পশু যোগ করুন</string>
    <string name="image_upload">ছবি আপলোড করুন</string>
    <string name="video_upload">ভিডিও আপলোড করুন</string>
    <string name="animal_name">পশুর নাম</string>
    <string name="animal_price">পশুর দাম</string>
    <string name="age">পশুর বয়স</string>
    <string name="color">পশুর রং</string>
    <string name="weight">ওজন (কেজি)</string>
    <string name="weight2">ওজন</string>
    <string name="height">উচ্চতা (ফুট)</string>
    <string name="teeth">দাঁত সংখ্যা</string>
    <string name="born">জাত</string>
    <string name="animal_type">পশুর ধরন</string>
    <string name="red">লাল</string>
    <string name="white">সাদা</string>
    <string name="black">কালো</string>
    <string name="brown">বাদামি</string>
    <string name="gray">ধূসর</string>
    <string name="mixed">মিশ্রণ</string>
    <string name="cow">গরু</string>
    <string name="buffalo">মহিষ</string>
    <string name="camel">উট</string>
    <string name="dumba">ধুম্বা</string>
    <string name="goat">ছাগল</string>
    <string name="sheep">ভেড়া</string>
    <string name="change_profile_pic">আপনার ছবি পরিবর্তন করতে চান?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="select">সিলেক্ট করুন</string>
    <string name="write">লিখুন</string>
    <string name="kg">কেজি</string>
    <string name="feet">ফুট</string>
    <string name="year">বছর</string>
    <string name="month">মাস</string>
    <string name="minimum_image">অনুগ্রহ করে চারটি থেকে ছয়টি ছবি পছন্দ করুন</string>
    <string name="change">ছবি পরিবর্তন করুন</string>
    <string name="crop">ছবির আকার পরিবর্তন করুন</string>
    <string name="first">প্রথমে</string>
    <string name="video_size">ভিডিওর সাইজ ৫০ এমবি থেকে ছোট হতে হবে।</string>
    <string name="are_you_sure_to_exit">আপনি কি বের হতে চান?</string>
    <string name="compare">তুলনা করুন</string>
    <string name="pricing">দামাদামি করুন</string>
    <string name="pricing_history">দামাদামির</string>
    <string name="pricing2">দাম হাঁকান</string>
    <string name="details">বিস্তারিত দেখুন...</string>
    <string name="unsold">অবিক্রিত...</string>
    <string name="sold">বিক্রিত</string>
    <string name="all">সব</string>
    <string name="thousand">হাজার</string>
    <string name="lakh">লাখ</string>
    <string name="jon">জন</string>
    <string name="picture">ছবি</string>
    <string name="id">পশুর আইডি</string>
    <string name="sell">বিক্রয় করুন</string>
    <string name="confirm_message">বিক্রেতা উপরোক্ত দামে বিক্রি করতে রাজি আছে। আপনি কিনতে চাইলে কনফার্ম করুন।</string>
    <string name="confirm">কনফার্ম করুন</string>
    <string name="new_price_request">নতুন একজন ক্রেতা আপনার পশুটি দাম করেছেন।</string>
    <string name="no_price">এখনো দাম হয়নি।</string>
    <string name="read_more">আরও পড়ুন...</string>
    <string name="sell_request">বিক্রেতা আপনার কাছে পশুটি বিক্রি করতে রাজি হয়েছেন।</string>
    <string name="view_price">দামগুলো দেখুন</string>
    <string name="edit">পরিবর্তন করুন</string>
    <string name="delete">বাতিল করুন</string>
    <string name="delete_permission">আপনি কি ডিলিট করতে চান?</string>
    <string name="payment_completed">দাম পরিশোধ</string>
    <string name="confirm2">কনফার্ম</string>
    <string name="time_remain">সময় বাকি</string>
    <string name="charge">চার্জ</string>
    <string name="buyer_name">ক্রেতার নাম</string>
    <string name="seller_name">বিক্রেতার নাম</string>
    <string name="sold_price">বিক্রিত দাম</string>
    <string name="referral_code_length">রেফারাল কোড ৫ সংখ্যার হতে হবে।</string>
    <string name="admin2">অ্যাডমিন</string>
    <string name="enter_your_admin_panel_password">অ্যাডমিন প্যানেলের পাসওয়ার্ড দিন</string>
    <string name="verify_admin">ভেরিফাই</string>
    <string name="sender_id">সেন্ডার আইডি</string>
    <string name="time">সময়</string>
    <string name="medium">মাধ্যম</string>
    <string name="money_amount">টাকার পরিমাণ</string>
    <string name="transaction_history">লেনদেনের হিসাব</string>
    <string name="contact">যোগাযোগ</string>
    <string name="disable_confirmation">ডিজেবল করতে চান?</string>
    <string name="enable_confirmation">এন্যাবল করতে চান?</string>
    <string name="notification">নোটিফিকেশন</string>
    <string name="search_hint_for_animal">পশুর নাম অথবা আইডি লিখুন......</string>
    <string name="payment">পেমেন্ট</string>
    <string name="about">এবাউট</string>
    <string name="buy_item_list">ক্রয়কৃত পশুর লিস্ট</string>
    <string name="write_date">তারিখ লিখুন</string>
    <string name="animal_price_write">পশুর দাম লিখুন</string>
    <string name="write_message">মেসেজ করুন</string>
    <string name="slogan">আমাদের স্লোগান</string>
    <string name="mission">আমাদের মিশন</string>
    <string name="off">অফ</string>
    <string name="on">অন</string>
    <string name="logout">আপনি কি লগ-আউট করতে চান?</string>
    <string-array name="tx_methods">
        <item>
            বিকাশ
        </item>
        <item>
            রকেট
        </item>
        <item>
            নগদ
        </item>
    </string-array>
</resources>
