<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/rinho"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/change_profile_pic"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@color/rinho"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </TextView>
    <View
        android:background="@color/divider_color1"
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </View>
    <Button
        android:id="@+id/yes"
        android:text="@string/yes"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@color/rinho"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </Button>
    <View
        android:background="@color/divider_color1"
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </View>
    <Button
        android:id="@+id/no"
        android:textSize="16sp"
        android:text="@string/no"
        android:textColor="@color/white"
        android:background="@color/rinho"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </Button>
    <View
        android:background="@color/divider_color1"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="1dp">
    </View>
</LinearLayout>