<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="3.8"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:background="@color/dark_yellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="@dimen/dp_20">

        <LinearLayout
            android:weightSum="3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@drawable/round_back_transparent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:id="@+id/price"
                    android:background="@drawable/round_back_white"
                    android:layout_width="match_parent"
                    android:hint="@string/animal_price_write"
                    android:textSize="@dimen/sp_16"
                    android:paddingLeft="@dimen/dp_10"
                    android:textColorHint="@color/light_megenda"
                    android:layout_height="46dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel"
            android:layout_weight=".8"
            android:layout_width="20dp"
            android:text="@string/cancel"
            android:textSize="@dimen/dp_18"
            android:textColor="@color/white"
            android:background="@drawable/round_btn_with_border"
            android:layout_marginRight="40dp"
            android:layout_height="45dp">
        </Button>
        <Button
            android:id="@+id/submit"
            android:layout_weight=".8"
            android:layout_width="20dp"
            android:text="@string/submit"
            android:textSize="@dimen/dp_18"
            android:textColor="@color/white"
            android:background="@drawable/round_btn_with_border"
            android:layout_marginLeft="28dp"
            android:layout_height="45dp">
        </Button>
    </LinearLayout>

</LinearLayout>