<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_weight="5"
    tools:context=".SignUp">
    <ImageView
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo">
    </ImageView>
    <LinearLayout
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp">
        <LinearLayout
            android:background="@drawable/round_back_transparent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="none"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:id="@+id/name"
                android:background="@drawable/round_back_white"
                android:layout_width="match_parent"
                android:hint="@string/name"
                android:textSize="@dimen/sp_16"
                android:paddingLeft="@dimen/dp_10"
                android:textColorHint="@color/light_megenda"
                android:layout_height="46dp"/>
            <EditText
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:id="@+id/phone_number"
                android:background="@drawable/round_back_white"
                android:layout_width="match_parent"
                android:hint="@string/phone_number"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:paddingLeft="@dimen/dp_16"
                android:textColorHint="@color/light_megenda"
                android:layout_height="46dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_height="0dp">
            <LinearLayout
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/open_sign_in_panel"
                    android:text="@string/signin1"
                    android:gravity="end"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/dp_18"
                    android:textColor="@color/light_megenda"
                    android:layout_marginStart="@dimen/dp_30"
                    android:layout_marginEnd="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp">
                </TextView>
            </LinearLayout>
            <Button
                android:layout_marginTop="60dp"
                android:backgroundTint="#8AB966"
                android:text="@string/signup2"
                android:onClick="sign_up"
                android:textSize="@dimen/dp_22"
                android:textColor="@color/white"
                android:background="@drawable/round_back_white"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>