<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/rinho"
    tools:context=".Seller.SellerProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/profile_icon"></de.hdodenhof.circleimageview.CircleImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/name2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/userID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/userID"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/phone_number"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"></TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:maxWidth="300dp"
                        android:singleLine="true"
                        android:text="@string/address"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"></TextView>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>