<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="15dp"
        app:cardBackgroundColor="#B43F51B5"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enter_your_admin_panel_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="?android:attr/detailsElementBackground"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/passTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="?android:attr/detailsElementBackground"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/com_facebook_button_like_background"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/verifyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/com_facebook_button_like_background"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/verify_admin"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>