<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".PinViewLayout">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardBackgroundColor="@color/sky"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/dp_22"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardBackgroundColor="@color/sky"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            app:pinBackground="@drawable/pin_back"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:pinWidth="35dp"
            app:pinHeight="35dp"
            app:pinLength="6"
            app:splitWidth="@dimen/dp_16"
            android:layout_gravity="center"
            app:textSize="8sp"
            app:cursorVisible="true"
            app:hint="0"
            android:layout_margin="@dimen/dp_10"
            app:inputType="number"
            app:password="false"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_margin="@dimen/dp_10"
        android:gravity="end|bottom"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/code_resend"
            app:cardBackgroundColor="@color/sky"
            android:layout_width="wrap_content"
            app:cardCornerRadius="@dimen/dp_10"
            android:layout_height="34dp">
            <TextView
                android:layout_gravity="center"
                android:text="@string/resnd_code"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardBackgroundColor="@color/sky"
        android:layout_height="wrap_content">
        <Button
            android:onClick="submit_code"
            android:text="@string/submit"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="48dp">
        </Button>
    </androidx.cardview.widget.CardView>


</LinearLayout>